# rGEDIsimulator

./: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  configure.win  cran-comments.md
.github/workflows/: build.yaml  rhub.yaml
R/: C_gediWFMetrics.R  C_gediWFSimulator.R  argParse.R  libHandler.R  rGEDI.simulator-package.R  zzz.R
man/: gediWFMetrics.Rd  gediWFSimulator.Rd  rGEDI.simulator-package.Rd  rGEDIsimulator-package.Rd
src/: Makevars.in  Makevars.ucrt  addNoiseHDF.c  argParse.c  debug.c  dummy.cpp  gediMetrics.c  gediSimulator.c
src/cmpfit-1.5/: mpfit.c
src/gedisimulator/: .gitignore  CMakeLists.txt  README.md  addNoiseHDF.c  clipLidar.c  collocateWaves.c  configure  configure.ac  findGroundCentre.c  fitTXpulse.c  gediAscii2hdf.c  gediHandler.py  gediIO.c  gediIO.h  gediMetric.c  gediMetric.h  gediNoise.c  gediNoise.h  gediRat.c  gediRat.h  gediTest.c  install.bat  lasCover.c  lasPoints.c  lgw2hdf.c  makefile  makefile.in  mapLidar.c  noiseTest.c  photonCount.c  photonCount.h  plotWaveComparison.py  subsetGEDI.py  testSlope.c
src/gedisimulator/cmake/: FindGEOTIFF.cmake
src/gedisimulator/extractTracks/: chooseMetricPrints.c
src/gedisimulator/m4/: gsl.m4
src/libclidar/: gaussFit.c  libDEMhandle.c  libDEMhandle.h  libLasProcess.c  libLasProcess.h  libLasRead.c  libLasRead.h  libLidVoxel.c  libLidVoxel.h  libLidarHDF.c  libLidarHDF.h  libOctree.c  libOctree.h  libTLSread.c  libTLSread.h  tiffRead.c  tiffRead.h  tiffWrite.c  tiffWrite.h
src/tools/: functionWrappers.c  functionWrappers.h  tools.c  tools.h
tests/: testthat.R
tests/testthat/: test-urls.R
tools/m4/: ax_lib_hdf5.m4  ax_lib_sz.m4  gsl.m4  m4_ax_lib_gdal.m4  zlib.m4
